--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./calculadora.png" />
+    <link rel="icon" href="./calculator.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Calculadora</title>
+    <title>React App</title>
   </head>
   <body>
 
